[package]
name = "trickster"
description = "user-friendly linux memory hacking library."
version = "0.0.6"
license = "MIT"
authors = ["Igor Klepacki <nullopt@riseup.net>"]
repository = "https://github.com/neg4n/trickster"
readme = "README.md"
keywords = [
    "linux",
    "memory-hacking",
    "hacking",
    "reverse-engineering",
    "debugging-tool",
]
categories = ["memory-management"]

[workspace]
members = ["examples/get_pid", "examples/rw_memory_ex", "examples/heap_addr_ex"]

[features]
default = ["byteorder-utils"]
byteorder-utils = ["byteorder"]

[dependencies]
anyhow = "1.0.31"
nix = "0.17.0"
scan_fmt = "0.2.5"
byteorder = { version = "1.3.4", optional = true }
